Some fixes in swagger spec
